@@ -79,7 +79,7 @@ public class KeyBlock extends AbstractSequentialList<Object> {
             if (index > max) {
                 throw new java.lang.RuntimeException("KeyBlock:next() -- Error KeyBlock depleted");
             }
-            return new Integer(index++);
+            return Integer.valueOf(index++);
         }
 
         /**
@@ -95,7 +95,7 @@ public class KeyBlock extends AbstractSequentialList<Object> {
          */
         @Override
         public Object previous() {
-            return new Integer(--index);
+            return Integer.valueOf(--index);
         }
 
         /**
